coastal-hazards-portal/src/main/webapp/css/index/slider-items.css
/* Slide item container */
#content-column > div.application-slide-container > div.application-slide-content > div > div.panel-default:hover {
    cursor: pointer;
}

#content-column > div.application-slide-container > div.application-slide-content > div > div.panel-default div.panel-body {
    background-color: #FFFFFF;
}

#content-column > div.application-slide-container div.application-card-container > div.application-card-body-container .application-card-title-row {
    font-size: 1.3em;
    margin-bottom: 10px;
}

.application-card-collapse-icon-container {
    display: table-cell;
    vertical-align: middle;
}

.application-card-collapse-row {
    color: #BBBBBB;
}

.application-card-control-row {
    text-align: center;
}

.application-card-control-row button {
    padding-right: 5px;
    padding-left: 5px;
}

.application-card-title-row .application-card-title-container-medium {
    font-size: 1.4em;
}

.application-card-content-row .application-card-content-container-medium {
    font-size: 1.3em;
}

.application-card-collapse-row-dottedline {
    display: table-cell;
    width: 100%;
}

.application-card-collapse-row-dottedline hr {
    border-top:1px dashed #BBBBBB; 
}

.application-card-container .item-control-button img {
    height: 45px;
}

.application-card-container .zoom-to-badge {
    background-color: #345280;
    margin-left: 5px;
}
.application-card-container .zoom-to-badge:hover {
    cursor: pointer;
}

.application-card-container .more-info-badge {
    background-color: #345280;
    margin-left: 5px;
}
    .application-card-container .more-info-badge a {
        color: #FFFFFF;
    }
    .application-card-container .more-info-badge a:hover {
        text-decoration: none;
    }

.application-card-container.open .application-card-collapse-row-closed {
    display: none;
}

.application-card-container:not(.open) .application-card-collapse-row-open {
    display: none;
}

.application-card-collapse-icon-container {
    padding-right: 5px;
    vertical-align: top;
}

.application-card-collapse-icon-container:hover {
    cursor: pointer;
    font-size-adjust: 0.7;
}
#application-slide-items-content-container .panel-heading {
    text-align: center;
}
#application-slide-items-content-container .panel-heading:hover {
    cursor: pointer;
}

#application-slide-items-content-container .panel-title {
    font-size: 1.9em;
}

.aggregation-selection-container {
    display: inline-block;
    position: absolute;
    border: 1px #000000 solid;
    min-width: 320px;
    width: auto;
    border-radius: 4px;
    -webkit-border-radius: 4px;
    -moz-border-radius: 4px;
    z-index: 1007;
}

.aggregation-selection-container ul {
    list-style-type: none;
    padding: 0px;
    margin: 0px;
}

.aggregation-selection-container ul li {
    background-color: #FFFFFF;
    padding: 5px;
}

.aggregation-selection-container ul li:hover {
    cursor: pointer;
    background-color: #f5f5f5;
}

@media (min-width: 992px) {
    /* No tab shown on large display. Toggled via button in bar */
    #application-slide-items-tab {
        display: none;
    }

    #application-slide-items-container {
        top: auto;
        left: auto;
        /*background-color: #F5F5F5;*/
    }

    #application-slide-items-content {
        height: 100%;
        width: 100%;
    }

    #application-slide-items-content-container {
        height: 100%;
        width: 100%;
        /*background-color: #F5F5F5;*/
        overflow-y: auto;
    }

    #content-column {
        height: 100%;
    }
}

@media (max-width: 991px) {
    #application-slide-items-container {
        position: absolute;
        z-index: 1006; /* 1005 is highest on map */
        height: 98%;
        overflow: hidden;
    }

        #application-slide-items-container > div:nth-child(2) > div {
            padding: 5px 5px 10px 5px;
            overflow-y: hidden;
            background-color: #F5F5F5;
            height: 100%;
            border-left: 2px solid #E3E3E3;
            border-top: 2px solid #E3E3E3;
            border-bottom: 2px solid #E3E3E3;
            border-top-left-radius: 10px 10px;
            -webkit-border-top-left-radius: 10px 10px;
            border-bottom-left-radius: 10px 10px;
            -webkit-border-bottom-left-radius: 10px 10px;
        }
        
        /* Scrollable inner container */
        #application-slide-items-container > div:nth-child(2) > div > div:nth-child(2) {
            overflow-y: auto;
            height: 95%;
        }
        
        #application-slide-items-container > div:nth-child(2) > div > div:first-child {
            margin-bottom: 10px;
        }
        #application-slide-items-container > div:nth-child(2) > div> div:not(:first-child) {
            /* 
                This fixes a bootstrap issue that causes the accordion to go beyond screen 
                height, causing scroll bars when the items slide is open
            */
            margin-bottom: 0px;
        }

    #application-slide-items-content {
        height: 100%;
        float:right;
    }

    #application-slide-items-tab {
        height : fit-content;
        width: fit-content;
        display: inline-block;
        background-color: #F5F5F5;
        border-left: 2px solid #E3E3E3;
        border-top: 2px solid #E3E3E3;
        border-bottom: 2px solid #E3E3E3;
        z-index: 2001;
        border-top-left-radius: 40px 10px;
        -webkit-border-top-left-radius: 40px 10px;
        border-bottom-left-radius: 40px 10px;
        -webkit-border-bottom-left-radius: 40px 10px;
        float: left;
        font-size: 1.4em;
        padding-left: 5px;
        padding-top: 5px;
        padding-bottom: 5px;
        color: #0033CC;
        z-index: 1007;
        top: 90%;
    }

    #application-slide-items-tab:hover {
        cursor: pointer;
    }

    #application-slide-items-content {
        border-bottom-left-radius: 10px 10px;
        -webkit-border-bottom-left-radius: 10px 10px;
    }
}

